Changed JDK to 1.8